Source/WebCore/dom/CustomElementReactionQueue.cpp
@@ -34,6 +34,7 @@
 #include "Element.h"
 #include "JSCustomElementInterface.h"
 #include "JSDOMBinding.h"
+#include "Microtasks.h"
 #include <heap/Heap.h>
 #include <wtf/Optional.h>
 #include <wtf/Ref.h>
@@ -50,57 +51,47 @@ public:
         AttributeChanged,
     };
 
-    CustomElementReactionQueueItem(Type type, Element& element, JSCustomElementInterface& elementInterface)
+    CustomElementReactionQueueItem(Type type)
         : m_type(type)
-        , m_element(element)
-        , m_interface(elementInterface)
     { }
 
-    CustomElementReactionQueueItem(Element& element, JSCustomElementInterface& elementInterface, Document& oldDocument, Document& newDocument)
+    CustomElementReactionQueueItem(Document& oldDocument, Document& newDocument)
         : m_type(Type::Adopted)
-        , m_element(element)
-        , m_interface(elementInterface)
         , m_oldDocument(&oldDocument)
         , m_newDocument(&newDocument)
     { }
 
-    CustomElementReactionQueueItem(Element& element, JSCustomElementInterface& elementInterface, const QualifiedName& attributeName, const AtomicString& oldValue, const AtomicString& newValue)
+    CustomElementReactionQueueItem(const QualifiedName& attributeName, const AtomicString& oldValue, const AtomicString& newValue)
         : m_type(Type::AttributeChanged)
-        , m_element(element)
-        , m_interface(elementInterface)
         , m_attributeName(attributeName)
         , m_oldValue(oldValue)
         , m_newValue(newValue)
     { }
 
-    void invoke()
+    void invoke(Element& element, JSCustomElementInterface& elementInterface)
     {
-        if (m_element->isFailedCustomElement())
-            return;
         switch (m_type) {
         case Type::ElementUpgrade:
-            m_interface->upgradeElement(m_element.get());
+            elementInterface.upgradeElement(element);
             break;
         case Type::Connected:
-            m_interface->invokeConnectedCallback(m_element.get());
+            elementInterface.invokeConnectedCallback(element);
             break;
         case Type::Disconnected:
-            m_interface->invokeDisconnectedCallback(m_element.get());
+            elementInterface.invokeDisconnectedCallback(element);
             break;
         case Type::Adopted:
-            m_interface->invokeAdoptedCallback(m_element.get(), *m_oldDocument, *m_newDocument);
+            elementInterface.invokeAdoptedCallback(element, *m_oldDocument, *m_newDocument);
             break;
         case Type::AttributeChanged:
             ASSERT(m_attributeName);
-            m_interface->invokeAttributeChangedCallback(m_element.get(), m_attributeName.value(), m_oldValue, m_newValue);
+            elementInterface.invokeAttributeChangedCallback(element, m_attributeName.value(), m_oldValue, m_newValue);
             break;
         }
     }
 
 private:
     Type m_type;
-    Ref<Element> m_element;
-    Ref<JSCustomElementInterface> m_interface;
     RefPtr<Document> m_oldDocument;
     RefPtr<Document> m_newDocument;
     Optional<QualifiedName> m_attributeName;
@@ -108,7 +99,8 @@ private:
     AtomicString m_newValue;
 };
 
-CustomElementReactionQueue::CustomElementReactionQueue()
+CustomElementReactionQueue::CustomElementReactionQueue(JSCustomElementInterface& elementInterface)
+    : m_interface(elementInterface)
 { }
 
 CustomElementReactionQueue::~CustomElementReactionQueue()
@@ -116,11 +108,15 @@ CustomElementReactionQueue::~CustomElementReactionQueue()
     ASSERT(m_items.isEmpty());
 }
 
-void CustomElementReactionQueue::enqueueElementUpgrade(Element& element, JSCustomElementInterface& elementInterface)
+void CustomElementReactionQueue::clear()
 {
-    ASSERT(element.tagQName() == elementInterface.name());
-    if (auto* queue = CustomElementReactionStack::ensureCurrentQueue())
-        queue->m_items.append({CustomElementReactionQueueItem::Type::ElementUpgrade, element, elementInterface});
+    m_items.clear();
+}
+
+void CustomElementReactionQueue::enqueueElementUpgrade(Element& element)
+{
+    auto& queue = CustomElementReactionStack::ensureCurrentQueue(element);
+    queue.m_items.append({CustomElementReactionQueueItem::Type::ElementUpgrade});
 }
 
 void CustomElementReactionQueue::enqueueElementUpgradeIfDefined(Element& element)
@@ -139,97 +135,102 @@ void CustomElementReactionQueue::enqueueElementUpgradeIfDefined(Element& element
     if (!elementInterface)
         return;
 
-    enqueueElementUpgrade(element, *elementInterface);
+    element.enqueueToUpgrade(*elementInterface);
 }
 
 void CustomElementReactionQueue::enqueueConnectedCallbackIfNeeded(Element& element)
 {
     ASSERT(element.isDefinedCustomElement());
-    auto* elementInterface = element.customElementInterface();
-    ASSERT(elementInterface);
-    if (!elementInterface->hasConnectedCallback())
-        return;
-
-    if (auto* queue = CustomElementReactionStack::ensureCurrentQueue())
-        queue->m_items.append({CustomElementReactionQueueItem::Type::Connected, element, *elementInterface});
+    auto& queue = CustomElementReactionStack::ensureCurrentQueue(element);
+    if (queue.m_interface->hasConnectedCallback())
+        queue.m_items.append({CustomElementReactionQueueItem::Type::Connected});
 }
 
 void CustomElementReactionQueue::enqueueDisconnectedCallbackIfNeeded(Element& element)
 {
     ASSERT(element.isDefinedCustomElement());
-    auto* elementInterface = element.customElementInterface();
-    ASSERT(elementInterface);
-    if (!elementInterface->hasDisconnectedCallback())
-        return;
-
-    if (auto* queue = CustomElementReactionStack::ensureCurrentQueue())
-        queue->m_items.append({CustomElementReactionQueueItem::Type::Disconnected, element, *elementInterface});
+    auto& queue = CustomElementReactionStack::ensureCurrentQueue(element);
+    if (queue.m_interface->hasDisconnectedCallback())
+        queue.m_items.append({CustomElementReactionQueueItem::Type::Disconnected});
 }
 
 void CustomElementReactionQueue::enqueueAdoptedCallbackIfNeeded(Element& element, Document& oldDocument, Document& newDocument)
 {
     ASSERT(element.isDefinedCustomElement());
-    auto* elementInterface = element.customElementInterface();
-    ASSERT(elementInterface);
-    if (!elementInterface->hasAdoptedCallback())
-        return;
-
-    if (auto* queue = CustomElementReactionStack::ensureCurrentQueue())
-        queue->m_items.append({element, *elementInterface, oldDocument, newDocument});
+    auto& queue = CustomElementReactionStack::ensureCurrentQueue(element);
+    if (queue.m_interface->hasAdoptedCallback())
+        queue.m_items.append({oldDocument, newDocument});
 }
 
 void CustomElementReactionQueue::enqueueAttributeChangedCallbackIfNeeded(Element& element, const QualifiedName& attributeName, const AtomicString& oldValue, const AtomicString& newValue)
 {
     ASSERT(element.isDefinedCustomElement());
-    auto* elementInterface = element.customElementInterface();
-    ASSERT(elementInterface);
-    if (!elementInterface->observesAttribute(attributeName.localName()))
-        return;
-
-    if (auto* queue = CustomElementReactionStack::ensureCurrentQueue())
-        queue->m_items.append({element, *elementInterface, attributeName, oldValue, newValue});
+    auto& queue = CustomElementReactionStack::ensureCurrentQueue(element);
+    if (queue.m_interface->observesAttribute(attributeName.localName()))
+        queue.m_items.append({attributeName, oldValue, newValue});
 }
 
-void CustomElementReactionQueue::enqueuePostUpgradeReactions(Element& element, JSCustomElementInterface& elementInterface)
+void CustomElementReactionQueue::enqueuePostUpgradeReactions(Element& element)
 {
+    ASSERT(element.isCustomElementUpgradeCandidate());
     if (!element.hasAttributes() && !element.inDocument())
         return;
 
-    auto* queue = CustomElementReactionStack::ensureCurrentQueue();
-    if (!queue)
-        return;
+    auto* queue = element.reactionQueue();
+    ASSERT(queue);
 
     if (element.hasAttributes()) {
         for (auto& attribute : element.attributesIterator()) {
-            if (elementInterface.observesAttribute(attribute.localName()))
-                queue->m_items.append({element, elementInterface, attribute.name(), nullAtom, attribute.value()});
+            if (queue->m_interface->observesAttribute(attribute.localName()))
+                queue->m_items.append({attribute.name(), nullAtom, attribute.value()});
         }
     }
 
-    if (element.inDocument() && elementInterface.hasConnectedCallback())
-        queue->m_items.append({CustomElementReactionQueueItem::Type::Connected, element, elementInterface});
+    if (element.inDocument() && queue->m_interface->hasConnectedCallback())
+        queue->m_items.append({CustomElementReactionQueueItem::Type::Connected});
 }
 
-void CustomElementReactionQueue::invokeAll()
+void CustomElementReactionQueue::invokeAll(Element& element)
 {
-    // FIXME: This queue needs to be per element.
     while (!m_items.isEmpty()) {
         Vector<CustomElementReactionQueueItem> items = WTFMove(m_items);
         for (auto& item : items)
-            item.invoke();
+            item.invoke(element, m_interface.get());
     }
 }
 
-CustomElementReactionQueue* CustomElementReactionStack::ensureCurrentQueue()
+inline void CustomElementReactionStack::ElementQueue::add(Element& element)
 {
-    // FIXME: This early exit indicates a bug that some DOM API is missing CEReactions
-    if (!s_currentProcessingStack)
-        return nullptr;
+    // FIXME: Avoid inserting the same element multiple times.
+    m_elements.append(element);
+}
+
+inline void CustomElementReactionStack::ElementQueue::invokeAll()
+{
+    Vector<Ref<Element>> elements;
+    elements.swap(m_elements);
+    for (auto& element : elements) {
+        auto* queue = element->reactionQueue();
+        ASSERT(queue);
+        queue->invokeAll(element.get());
+    }
+    ASSERT(m_elements.isEmpty());
+}
+
+CustomElementReactionQueue& CustomElementReactionStack::ensureCurrentQueue(Element& element)
+{
+    ASSERT(element.reactionQueue());
+    if (!s_currentProcessingStack) {
+        auto& queue = CustomElementReactionStack::ensureBackupQueue();
+        queue.add(element);
+        return *element.reactionQueue();
+    }
 
     auto*& queue = s_currentProcessingStack->m_queue;
     if (!queue) // We use a raw pointer to avoid genearing code to delete it in ~CustomElementReactionStack.
-        queue = new CustomElementReactionQueue;
-    return queue;
+        queue = new ElementQueue;
+    queue->add(element);
+    return *element.reactionQueue();
 }
 
 CustomElementReactionStack* CustomElementReactionStack::s_currentProcessingStack = nullptr;
@@ -240,6 +241,39 @@ void CustomElementReactionStack::processQueue()
     m_queue->invokeAll();
     delete m_queue;
     m_queue = nullptr;
+}
+
+class BackupElementQueueMicrotask final : public Microtask {
+    WTF_MAKE_FAST_ALLOCATED;
+private:
+    Result run() final
+    {
+        CustomElementReactionStack::processBackupQueue();
+        return Result::Done;
+    }
+};
+
+static bool s_processingBackupElementQueue = false;
+
+CustomElementReactionStack::ElementQueue& CustomElementReactionStack::ensureBackupQueue()
+{
+    if (!s_processingBackupElementQueue) {
+        s_processingBackupElementQueue = true;
+        MicrotaskQueue::mainThreadQueue().append(std::make_unique<BackupElementQueueMicrotask>());
+    }
+    return backupElementQueue();
+}
+
+void CustomElementReactionStack::processBackupQueue()
+{
+    backupElementQueue().invokeAll();
+    s_processingBackupElementQueue = false;
+}
+
+CustomElementReactionStack::ElementQueue& CustomElementReactionStack::backupElementQueue()
+{
+    static NeverDestroyed<ElementQueue> queue;
+    return queue.get();
 }
 
 }
